--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
 <script type="text/javascript" src="src/index_script.js"></script>
 <link rel="stylesheet" href="src/index_style.css">
-<link rel="shortcut icon" href="#" />
-<title>Title</title>
+<title>Playground</title>
 </head>
 <body>
 
