--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
 <script type="text/javascript" src="src/index_script.js"></script>
 <link rel="stylesheet" href="src/index_style.css">
+<link rel="shortcut icon" href="#" />
 <title>Playground</title>
 </head>
 <body>
